# iseq

./: MANIFEST.in  setup.cfg  setup.py
iseq/: __init__.py  conftest.py  fragment.py  model.py  profile.py  result.py
iseq/_data/: PF03373_GALNBKIG_cut.amino.fasta  PF03373_GALNBKIG_cut.codon.fasta  PF03373_GALNBKIG_cut.gff  amino1.fasta  database1.hmm  output1.gff  output1_evalue.gff  tblout.txt
iseq/frame/: __init__.py  fragment.py  model.py  path.py  profile.py  result.py  step.py
iseq/frame/test/: test_profile.py
iseq/io/: __init__.py  _misc.py  _tblout.py
iseq/io/test/: test_readers.py
iseq/standard/: __init__.py  fragment.py  model.py  path.py  profile.py  result.py  step.py
iseq/standard/test/: test_profile.py
